--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -131,7 +131,7 @@ html {
 
 .slot-reel {
   will-change: transform;
-  transition: transform 2s cubic-bezier(0.1, 0.0, 0.2, 1.0);
+  transition: transform 3s cubic-bezier(0.33, 1, 0.68, 1);;
   transform: translateZ(0);
 }
 
